
<resources>
    <string name="hello">Hello World, MapProActivity!</string>
    <string name="app_name">Tim kiem bai dau xe</string>
        <string name="place">Địa điểm</string> 
      <string name="street">Dẫn đường</string>
      
      

    <string name="locLabel">Location:</string>
    <string name="goLabel">Go</string>
    <string name="latLabel">Lat</string>
    <string name="longLabel">Long</string>
    <string name="trackLabel">Track Present Location</string>
    <string name="satLabel">Sat</string>
    <string name="mapLabel">Map</string>
    <string name="quit">Exit</string>
    <string name="help_title">Help</string>
    <string name="help_text">This is the help file for this application.\n\nItem 1\n<i>Item 2 
    			(in italics)</i>\nItem 3</string>
    <string name="settings">Settings</string>
    <string name="compass_title">Compass</string>
    <string name="compass_summary">Whether to display orientation compass</string>
    <string name="gpsPrefs_title">GPS Preferences</string>
    <string name="gpsPrefs_summary">Location precision (higher precision gives shorter battery life)</string>
    
    <!-- Place the apiKey string here, to be read in both mapme.xml and showthemap.xml -->
    <string name="apiKeyM33">07WVUg-srWUbhpkGj1mi0w56xD9nMEu0NhqJeYg</string>
    <string name="apiKeyM81">0Erct0VhQ1pDVF0Hb1hCaTPnBG1MhmaSqaNvjdg</string>
    <string name="apiKeyCastor">07WVUg-srWUbTcCW-uHqNQR4SdYngQOCgmJN60A</string>
    <string name="note1">Thông báo</string>


    <string name="action_settings">Cài đặt</string>
    <string name="action_tutorial">Hướng dẫn</string>
    <string name="action_report">Báo lỗi</string>
    <string name="action_clear">Xóa bản đồ</string>
    <string name="action_atm">Danh sách ATM</string>
    <string name="search_title">Tìm kiếm</string>
    <string name="bank">Tên Ngân Hàng</string>
    <string name="search">Tìm kiếm</string>
    <string name="city">Tỉnh, Thành phố</string>
    <string name="district">Quận, Huyện</string>
    <string name="search_hint">Địa chỉ</string>
    <string name="action_exit">Thoát</string>
    <string name="pref_cate">Cài đặt</string>
    <string name="pref_cate_title">Cài đặt</string>
    <string name="pref_radius_title">Bán kính tìm kiếm</string>
    <string name="action_search">Tìm kiếm</string>
    <string name="map">Bản đồ</string>
    <string name="direction">Dẫn đường</string>

    <string name="error">Báo lỗi</string>
    <string name="email">Email</string>
    <string name="email_hint">Điền email của bạn</string>
    <string name="content">Nội dung</string>
    <string name="popup_location">Tọa độ:</string>
    <string name="popup_distance">Khoảng cách:</string>
    <string name="pref_clear_mess">Are you sure?</string>
    <string name="pref_clear_title">Clear all favourite</string>
    <string name="pref_clear_ok">Clear Success</string>
    <string name="pref_clear_fail">Clear failed</string>
    <string name="pref_favo_on">On</string>
    <string name="pref_favo_off">Off</string>
    <string name="pref_favo_title">Favourite Search</string>
    <string name="pref_favo_summary">Only search favourite</string>
    <string name="ok">OK</string>
    <string name="cancel">Thoát</string>
    <string name="send">Gửi</string>
    <string name="dialog_title">Bạn không có kết nối Internet</string>
    <string name="dialog_continue">Tiếp tục</string>
    <string name="dialog_content">Kết nối Internet để sử dụng Bản đồ.\n Hoặc tiếp tục tìm kiếm ATM không cần bản đồ.</string>
    <string name="dialog_content1">Vui lòng kiểm tra lại kết nối Internet của bạn</string>
    <string name="progress">Đang xử lý</string>
    <string name="no_update">Cơ sở dữ liệu không có cập nhật mới</string>
    <string name="cate">Chọn Ngân Hàng</string>
    <string name="no_result">Không tìm thấy kết quả phù hợp</string>

    <string-array name="radiusOptions">
        <item>500 m</item>
        <item>1 km</item>
        <item>2 km</item>
        <item>5 km</item>
        <item>10 km</item>
        <item>15 km</item>
    </string-array>
    <string-array name="radiusValues">
        <item>500 m</item>
        <item>1 km</item>
        <item>2 km</item>
        <item>5 km</item>
        <item>10 km</item>
        <item>15 km</item>
    </string-array>
    

      
      
</resources>
